Add back support for tooltip image